# CECS-282-OLD

./: CMakeLists.txt  README.md
Labs/: CanLab.cpp
Lecture Notes/Intro to Header/: Can.cpp  Can.h  CanMain.cpp  SixPack.h
Lecture Notes/random/: random.cpp
Projects/Solitare Prime/: Card.cpp  Card.h  Deck.cpp  Deck.h  SPMain.cpp
