cmake_minimum_required(VERSION 3.17)
project(CECS_282)

set(CMAKE_CXX_STANDARD 20)

add_executable(CECS_282 "Lecture Notes/Intro to Header/CanMain.cpp" "Lecture Notes/Intro to Header/Can.h" "Lecture Notes/Intro to Header/Can.cpp" Labs/CanLab.cpp "Lecture Notes/Intro to Header/SixPack.cpp" "Lecture Notes/Intro to Header/SixPack.h")